{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 109,
  "lineage": "77d6a5a0-1fd7-08b5-1829-21619c184e52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:listener/app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf/434d90a31511413e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-backend/9e5c62898b4749c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:listener/app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf/434d90a31511413e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-backend-service.aws_lb_target_group.lb_target_group_fargate",
            "module.ecs.aws_lb.backend_lb",
            "module.ecs.aws_security_group.backend_lb",
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:listener/app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae/5c738cda181fc672",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-frontend/5a2b6d2074ce3f57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:listener/app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae/5c738cda181fc672",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-frontend-service.aws_lb_target_group.lb_target_group_fargate",
            "module.ecs.aws_lb.frontend_lb",
            "module.ecs.aws_security_group.frontend_lb",
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:vpc/vpc-08ec8f7175bb88734",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04a18b47927bdba5e",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07e9b74c66e55a779",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ec8f7175bb88734",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09cf62891dbcd67cf",
            "owner_id": "031064779413",
            "tags": {
              "Name": "sam-bicky-prod",
              "createdBy": "Sam Bicky",
              "env": "prod"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf",
            "arn_suffix": "app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-sam-bicky-prod-ecs-backend-lb-465664495.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-backend-lb/33b692116db68edf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sam-bicky-prod-ecs-backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05500b48e92d0cb01"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03625afae1fe92bd8"
              },
              {
                "subnet_id": "subnet-05e90232837398ca2"
              }
            ],
            "subnets": [
              "subnet-03625afae1fe92bd8",
              "subnet-05e90232837398ca2"
            ],
            "tags": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.ecs.aws_security_group.backend_lb",
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae",
            "arn_suffix": "app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sam-bicky-prod-ecs-frontend-lb-1005397634.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:loadbalancer/app/sam-bicky-prod-ecs-frontend-lb/157c4cdc29101fae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sam-bicky-prod-ecs-frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7f904fe3ac99864"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03625afae1fe92bd8"
              },
              {
                "subnet_id": "subnet-05e90232837398ca2"
              }
            ],
            "subnets": [
              "subnet-03625afae1fe92bd8",
              "subnet-05e90232837398ca2"
            ],
            "tags": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.ecs.aws_security_group.frontend_lb",
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:security-group/sg-05500b48e92d0cb01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05500b48e92d0cb01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sam-bicky-prod-allow-all-backend-lb",
            "name_prefix": "",
            "owner_id": "031064779413",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:security-group/sg-0b7f904fe3ac99864",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7f904fe3ac99864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sam-bicky-prod-allow-all-frontend-lb",
            "name_prefix": "",
            "owner_id": "031064779413",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.data.aws_vpc.main",
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-backend-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group_fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-backend/9e5c62898b4749c4",
            "arn_suffix": "targetgroup/sam-bicky-prod-backend/9e5c62898b4749c4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-backend/9e5c62898b4749c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sam-bicky-prod-backend",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-backend-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:security-group/sg-02fc7dd0ce0f51a83",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fc7dd0ce0f51a83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sam-bicky-prod-backend-ecs-sg",
            "name_prefix": "",
            "owner_id": "031064779413",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-frontend-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group_fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-frontend/5a2b6d2074ce3f57",
            "arn_suffix": "targetgroup/sam-bicky-prod-frontend/5a2b6d2074ce3f57",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:031064779413:targetgroup/sam-bicky-prod-frontend/5a2b6d2074ce3f57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sam-bicky-prod-frontend",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-frontend-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:security-group/sg-0f5679fca5639839e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5679fca5639839e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sam-bicky-prod-frontend-ecs-sg",
            "name_prefix": "",
            "owner_id": "031064779413",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d03fd094494fbd44",
            "association_id": "eipassoc-0b18aa6458ca964bd",
            "domain": "vpc",
            "id": "eipalloc-0d03fd094494fbd44",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-03313533f1ede856d",
            "private_dns": "ip-10-0-1-234.ca-central-1.compute.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-99-34-254.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.99.34.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sam-bicky-prod-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:internet-gateway/igw-0f7ec53ff4713871e",
            "id": "igw-0f7ec53ff4713871e",
            "owner_id": "031064779413",
            "tags": {
              "Name": "sam-bicky-prod",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d03fd094494fbd44",
            "association_id": "eipassoc-0b18aa6458ca964bd",
            "connectivity_type": "public",
            "id": "nat-047fdd4350baf619a",
            "network_interface_id": "eni-03313533f1ede856d",
            "private_ip": "10.0.1.234",
            "public_ip": "3.99.34.254",
            "subnet_id": "subnet-03625afae1fe92bd8",
            "tags": {
              "Name": "sam-bicky-prod-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            }
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_eip.nat",
            "module.ecs.module.vpc.aws_internet_gateway.this",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007e8c1dcf84155a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-047fdd4350baf619a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007e8c1dcf84155a8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_eip.nat",
            "module.ecs.module.vpc.aws_internet_gateway.this",
            "module.ecs.module.vpc.aws_nat_gateway.this",
            "module.ecs.module.vpc.aws_route_table.private",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f7ec53ff4713871e",
            "id": "r-rtb-0db196168998569191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db19616899856919",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_internet_gateway.this",
            "module.ecs.module.vpc.aws_route_table.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:route-table/rtb-007e8c1dcf84155a8",
            "id": "rtb-007e8c1dcf84155a8",
            "owner_id": "031064779413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047fdd4350baf619a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sam-bicky-prod-private",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-private",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:route-table/rtb-0db19616899856919",
            "id": "rtb-0db19616899856919",
            "owner_id": "031064779413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7ec53ff4713871e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sam-bicky-prod-public",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-public",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01395c4cad40e1c05",
            "route_table_id": "rtb-007e8c1dcf84155a8",
            "subnet_id": "subnet-0593343aca762a728"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_route_table.private",
            "module.ecs.module.vpc.aws_subnet.private",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004165e9d5870569c",
            "route_table_id": "rtb-007e8c1dcf84155a8",
            "subnet_id": "subnet-07cef453e60978f61"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_route_table.private",
            "module.ecs.module.vpc.aws_subnet.private",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd4febe656f6f1fc",
            "route_table_id": "rtb-0db19616899856919",
            "subnet_id": "subnet-03625afae1fe92bd8"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_route_table.public",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f8ebdf56ea1bd1",
            "route_table_id": "rtb-0db19616899856919",
            "subnet_id": "subnet-05e90232837398ca2"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_route_table.public",
            "module.ecs.module.vpc.aws_subnet.public",
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:subnet/subnet-0593343aca762a728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593343aca762a728",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031064779413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sam-bicky-prod-private-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-private-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:subnet/subnet-07cef453e60978f61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cef453e60978f61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031064779413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sam-bicky-prod-private-ca-central-1b",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-private-ca-central-1b",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:subnet/subnet-03625afae1fe92bd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03625afae1fe92bd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031064779413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sam-bicky-prod-public-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-public-ca-central-1a",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:subnet/subnet-05e90232837398ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e90232837398ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031064779413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sam-bicky-prod-public-ca-central-1b",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod-public-ca-central-1b",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "vpc_id": "vpc-08ec8f7175bb88734"
          },
          "dependencies": [
            "module.ecs.module.vpc.aws_vpc.this",
            "module.ecs.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:031064779413:vpc/vpc-08ec8f7175bb88734",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8a279474a6ec82f",
            "default_route_table_id": "rtb-09cf62891dbcd67cf",
            "default_security_group_id": "sg-0e667851b34c7de30",
            "dhcp_options_id": "dopt-07e9b74c66e55a779",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ec8f7175bb88734",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cf62891dbcd67cf",
            "owner_id": "031064779413",
            "tags": {
              "Name": "sam-bicky-prod",
              "createdBy": "Sam Bicky",
              "env": "prod"
            },
            "tags_all": {
              "Name": "sam-bicky-prod",
              "createdBy": "Sam Bicky",
              "env": "prod"
            }
          }
        }
      ]
    }
  ]
}